# ca_coursework

./: .gitignore  CMakeLists.txt  README.md  build.sh
bench/: CMakeLists.txt  bench_manager.cc  bip_bench.cc  cache_layout_bench.cc  log_bench.cc  replace_policy_bench.cc  score_init_bench.cc  score_threshold_bench.cc  write_policy_bench.cc
bench/include/: bench_manager.h
cache/: CMakeLists.txt  place_holder.cc
cache/cache_simulator/: CMakeLists.txt  place_holder.cc
cache/cache_simulator/include/: cache.h
cache/file_parser/: CMakeLists.txt
cache/file_parser/include/: file_parser.h
cache/include/: adaptive_insertion_policies.h  bitset.h  cache.h  cache_metadata.h  cache_util.h  global_build_config.h  global_build_config.h.in  replace_policy.h  score.h  way_metadata.h
cache/test/: CMakeLists.txt  bitset_test.cc  parse_test.cc  replace_policy_test.cc
doc/: result.ods
file_parser/: file_parser.cc
file_parser/include/: file_parser.h
include/: bitset.h  cache_util.h  global_build_config.h.in  perf_stats.h
test/: CMakeLists.txt  bitset_test.cc  cache_test.cc  parse_test.cc  replace_policy_test.cc  way_metadata_test.cc
